<resources>
    <string name="app_name" translatable="false">Txapuzapp</string>
    <string name="carpinteria">Carpinteria</string>
    <string name="fontaneria">Fontaneria</string>
    <string name="electricista">Electricista</string>
    <string name="pintura">Pintura</string>
    <string name="otros">Otros</string>

    <string name="openNavDrawer" translatable="false">Navigation Drawer Open</string>
    <string name="closeNavDrawer" translatable="false">Navigation Drawer Close</string>
    <string name="numero" translatable="false">689345621</string>
    <string name="Email" translatable="false">txapuzalia@gmail.com</string>
    <string name="home" translatable="false">Home</string>
    <string name="descripcion1">Txapuzapp es una aplicación que sirve para comprar nuestros servicios para arreglar los imperfectos de su casa</string>
    <string name="descripcion2">En esta app encontrara todo tipo de apaños para tu hogar. Aqui mostramos unos videos de algunos servicios que proporcionamos a los clientes</string>
    <string name="phone">Teléfono</string>
    <string name="telFijo">Teléfono fijo</string>
    <string name="telMovil">Teléfono móvil</string>
    <string name="numeroTel" translatable="false">619423516</string>
    <string name="numeroFij" translatable="false">944453006</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="address">Calle, número, piso, CP</string>
    <string name="email">Correo electrónico</string>
    <string name="note">Nota…</string>
    <string name="iniciar">Iniciar</string>
    <string name="desliza">Desliza</string>

    <string name="botonCarp1">Reforma general</string>
    <string name="botonCarp2">Mantenimiento de muebles</string>
    <string name="botonCarp3">Puertas exteriores e interiores</string>
    <string name="botonCarp4">Suelos</string>
    <string name="botonCarp5">Arreglo de armarios empotrados</string>
    <string name="botonCarp6">Montar y desmontar mobiliario varios</string>
    <string name="botonCarp7">Lijado de mobiliario de madera</string>
    <string name="botonCarp8">Otros</string>

    <string name="botonElectr1">Instalacion porteros automaticos</string>
    <string name="botonElectr2">Instalacion de calefacciones</string>
    <string name="botonElectr3">Instalaciones de antenas</string>
    <string name="botonElectr4">Sistema de ahorro energetico</string>
    <string name="botonElectr5">Reubicacion electrica</string>
    <string name="botonElectr6">Otros</string>

    <string name="botonPint1">Interiores</string>
    <string name="botonPint2">Empapelado</string>
    <string name="botonPint3">Colocacion de vinilo</string>
    <string name="botonPint4">Raseado de paredes</string>
    <string name="botonPint5">Otros</string>

    <string name="botonFont1">Arreglo de goteras</string>
    <string name="botonFont2">Reparacion de tuberias</string>
    <string name="botonFont3">Fugas de aguas</string>
    <string name="botonFont4">Reparacion de sifones</string>
    <string name="botonFont5">Otros</string>

    <string name="botonOtros1">Programar TV</string>
    <string name="botonOtros2">Colgar cuadros</string>
    <string name="botonOtros3">Otros</string>

    <string name="textoGeneralOpciones">Elige la tarea que necesite</string>
    <string name="enviar">ENVIAR</string>
    <string name="opcion_elegida">OPCION ELEGIDA:</string>

    <string name="seleccionar">Seleccionar</string>
    <string name="foto">Foto</string>
    <string name="sector">Sector</string>
    <string name="contacto">Contacto</string>
    <string name="opcion">Opción</string>
    <string name="btnHome">Menu</string>

    <string name="carp1Desc">Contamos con la profesionalidad de más de 2 años de experiencia ¡Consúltanos!</string>
    <string name="carp2Desc">Lijar, barnizar, encerar… serán algunos de los trabajos, para recuperar la vida del mueble.</string>
    <string name="carp3Desc">Reparación te todo tipo de puertas, bien sean en aluminio, pvc, madera, mixtas.</string>
    <string name="carp4Desc">Arreglo de muebles de cocina,sustituir mueble fregadero,cambiar bisagras,etc…</string>
    <string name="carp5Desc">Reparaciones de armarios corredera y abatibles, blindadas y acorazadas,etc…</string>
    <string name="carp6Desc">Contamos con profesionales, para montar y desmontar todo tipo de muebles.</string>
    <string name="carp7Desc">Les lijamos los muebles tanto viejos como nuevos.</string>
    <string name="carp8Desc">Podemos dar a los muebles un acabado especial así como alargar su vida útil mediante la restauración.</string>

    <string name="elec1Desc">Instalamos su nuevo portero automático o lo actualizamos a videoportero.</string>
    <string name="elec2Desc">Nuestras actividades principales son la ejecución y mantenimiento de todo tipo de instalaciones de calefacción.</string>
    <string name="elec3Desc">Realizamos la colocación, reparación y mantenimiento de todo tipo de antenas.</string>
    <string name="elec4Desc">Txapuzalia ofrece soluciones exclusivas en pavimentos adaptadas a cualquier tipo de espacio.</string>
    <string name="elec5Desc">Reubicar cables o líneas eléctricas. Mover el cable de luz que llega al domicilio. Reubicar transformador.</string>
    <string name="elec6Desc">Reparar averías eléctricas.</string>


    <string name="font1Desc">Reparación de goteras y filtraciones en el hogar. Arreglo de goteras provocadas por filtraciones de agua.</string>
    <string name="font2Desc">Tipos de rotura de tuberías y su reparación profesional.</string>
    <string name="font3Desc">Detección y localización de fugas de agua, asi como su reparacion y mantenimiento.</string>
    <string name="font4Desc">Reparación y limpieza de sifones. Contamos con repuestos originales de válvulas, etc.</string>
    <string name="font5Desc">Mantenimiento abastecimiento de agua potable y evacuación de aguas residuales</string>

    <string name="otros1Desc">Le programamos la TV con todos los canales disponibles.</string>
    <string name="otros2Desc">Le colgamos todos los cuadros que necesite.</string>
    <string name="otros3Desc">Comentar en el formulario.</string>

    <string name="pint1Desc">Utilizamos pintura plástica al agua ya que no tiene olores desagradables y se seca rápido.</string>
    <string name="pint2Desc">Empapelamos paredes y techos y todo tipo de estancias: salones, baños, etc…</string>
    <string name="pint3Desc">Colocamos vinilos para exteriores en escaparates y ventanas con un resultado estupendo.</string>
    <string name="pint4Desc">Nivelamos una pared y la preparamos para un pintado con un acabado mate en paredes interiores.</string>
    <string name="pint5Desc">Rascado de las paredes para retirar la pintura antigua o el papel pintado antes de aplicar la nueva.</string>


    <string name="tittle">RELLENA EL FORMULARIO</string>
    <string name="correoTexto">Escoja un correo</string>
    <string name="formularioBien">Su solicitud se ha almacenado correctamente</string>
    <string name="formularioMal">Ha habido un error con su solicitud. Vuelva a intentarlo mas tarde.</string>
    <string name="correoMal">El correo electrónico es incorrecto.</string>
    <string name="telefonoMal">El número de teléfono es incorrecto.</string>
    <string name="camposVacios">Rellene los campos obligatorios</string>
    <string name="telefonoObligatorio">El número de teléfono es obligatorio</string>
    <string name="emailObligatorio">El correo electrónico es obligatorio</string>
    <string name="direccionObligatoria">La dirección es obligatorio</string>
    <string name="apellidoObligatorio">El Apellido es obligatorio</string>
    <string name="nombreObligatorio">El Nombre es obligatorio</string>
    <string name="image_from_url" translatable="false">image_from_url</string>
    <string name="modo" translatable="false">Modo</string>
    <string name="Mode">Modo</string>
    <string name="modoOn">Activando Modo Oscuro/Modu iluna aktibatzen</string>
    <string name="modoOff">Activando Modo Claro/Argi modua aktibatzen</string>



</resources>