<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <item android:title="">
        <menu>
            <item android:id="@+id/navigation_home"
                android:icon="@drawable/casa"
                android:title="@string/home" />
        </menu>
    </item>

    <item android:title="@string/sector">
        <menu>
            <item android:id="@+id/navigation_carpinteria"
                android:title="@string/carpinteria"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:icon="@drawable/sierra"
                />
            <item android:id="@+id/navigation_fontaneria"
                android:title="@string/fontaneria"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:icon="@drawable/llave"/>
            <item android:id="@+id/navigation_electricista"
                android:title="@string/electricista"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:icon="@drawable/alicates"/>
            <item android:id="@+id/navigation_pintura"
                android:title="@string/pintura"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:icon="@drawable/brocha"/>
            <item android:id="@+id/navigation_otros"

                android:title="@string/otros"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"
                android:icon="@drawable/destornillador"/>
        </menu>
    </item>
    <item android:title="@string/contacto">
            <menu>
                <item android:id=" @+id/navigation_correo"
                    android:title="@string/email"
                    android:fontFamily="sans-serif-medium"
                    android:icon="@drawable/correo" />
                <item android:id="@+id/navigation_telefonoMovil"
                    android:title="@string/telMovil"
                    android:fontFamily="sans-serif-medium"
                    android:icon="@drawable/telefono" />
            <item android:id="@+id/navigation_telefonoFijo"
                android:title="@string/telFijo"
                android:fontFamily="sans-serif-medium"
                android:icon="@drawable/telefono_fijo" />
            </menu>
    </item>

</menu>


