<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Fondo"
    >


    <!-- EL SCROLLVIEW PARA PODER BAJAR -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- IMAGEN DEL LOGO -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="333dp"
                android:layout_marginTop="175dp"
                android:src="@drawable/logo"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/foto" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:padding="0dp"
                android:text="@string/desliza"
                android:textAlignment="center"
                android:textSize="25sp"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/flecha"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/image_from_url"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />


            <!-- EL TEXTO SOBRE TXAPUZALIA -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="175dp"
                android:padding="15dp"
                android:text="@string/descripcion"
                android:textSize="25sp"
                tools:ignore="MissingConstraints" />


            <ImageSwitcher
                android:id="@+id/imageSwitcher"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_marginTop="30dp"/>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/descripcion2"
                android:textSize="25sp"
                tools:ignore="MissingConstraints" />


            <VideoView
                android:id="@+id/videoview"

                android:layout_width="wrap_content"
                android:layout_height="207dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_centerInParent="true"/>


            <!-- BOTÓN PARA IR A ATRÁS -->
            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/btnHome" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>